{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 12,
  "lineage": "7e1452df-5141-e298-872c-15eb290e523d",
  "resources": [
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:715684093864:security-group/sg-03d621bf982de7eb8",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-03d621bf982de7eb8",
            "ingress": [],
            "name": "hackweek-2020-my-cluster-local20200925184922341100000002",
            "name_prefix": "hackweek-2020-my-cluster-local",
            "owner_id": "715684093864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hackweek-2020-my-cluster-local-eks_cluster_sg",
              "Namespace": "hackweek-2020-",
              "Stage": "local",
              "Workspace": "default",
              "department": "hackweek-2020",
              "owner": "hackweek-2020",
              "project": "hackweek-2020",
              "source_repo": "https://github.com/scribd/terraform-aws-recycle-eks",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e21b0ca5340c75d"
          }
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:715684093864:security-group/sg-0fa0bffa22262d1e8",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0fa0bffa22262d1e8",
            "ingress": [],
            "name": "hackweek-2020-my-cluster-local20200925184922341000000001",
            "name_prefix": "hackweek-2020-my-cluster-local",
            "owner_id": "715684093864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hackweek-2020-my-cluster-local-eks_worker_sg",
              "Namespace": "hackweek-2020-",
              "Stage": "local",
              "Workspace": "default",
              "department": "hackweek-2020",
              "kubernetes.io/cluster/hackweek-2020-my-cluster-local": "owned",
              "owner": "hackweek-2020",
              "project": "hackweek-2020",
              "source_repo": "https://github.com/scribd/terraform-aws-recycle-eks",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e21b0ca5340c75d"
          }
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1079053972",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03d621bf982de7eb8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-699317232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03d621bf982de7eb8",
            "self": false,
            "source_security_group_id": "sg-0fa0bffa22262d1e8",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2406295983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fa0bffa22262d1e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1860443326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa0bffa22262d1e8",
            "self": false,
            "source_security_group_id": "sg-03d621bf982de7eb8",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2078408356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa0bffa22262d1e8",
            "self": false,
            "source_security_group_id": "sg-03d621bf982de7eb8",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.cluster",
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1806967460",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fa0bffa22262d1e8",
            "self": false,
            "source_security_group_id": "sg-0fa0bffa22262d1e8",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks-cluster.aws_security_group.workers"
          ]
        }
      ]
    }
  ]
}